[ci skip] Update translations (Macedonian)

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -139,4 +139,31 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Означени краеви на линиите со две или повеќе празни места</string>
     <string name="general">Општо</string>
     <string name="resources">Ресурси</string>
+    <string name="special_key">Специјално копче</string>
+    <string name="key_page_up">Страна Нагоре (Page Up)</string>
+    <string name="key_page_down">Страна Надоле (Page Down)</string>
+    <string name="key_pos_1">Почеток на линија (Home)</string>
+    <string name="key_pos_end">Крај на линија (End)</string>
+    <string name="key_pos_1_document">Почеток на документ</string>
+    <string name="key_pos_end_document">Крај на документ</string>
+    <string name="left">Лево</string>
+    <string name="right">Десно</string>
+    <string name="top">Врв</string>
+    <string name="bottom">Дно</string>
+    <string name="center">Центар</string>
+    <string name="open_source_licenses">Лиценци за отворен код</string>
+    <string name="rate_this_app">Оценете ја оваа апликација</string>
+    <string name="translate">Преведи</string>
+    <string name="source_code">Изворен код</string>
+    <string name="project_license">Лиценца на проект</string>
+    <string name="descending">опаѓачки</string>
+    <string name="ascending">растечки</string>
+    <string name="location">Локација</string>
+    <string name="text_lines">Текст линии</string>
+    <string name="text_characters">Текст Карактери</string>
+    <string name="text_words">Текст Зборови</string>
+    <string name="directory">Директориуми</string>
+    <string name="recently_viewed_documents">Неодамнешно видени документи</string>
+    <string name="details">Детали</string>
+    <string name="calendar">Календар</string>
 </resources>
