[ci skip] Update translations (Macedonian)

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -139,13 +139,25 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Означени краеви на линиите со две или повеќе празни места</string>
     <string name="general">Општо</string>
     <string name="resources">Ресурси</string>
+    <string name="line_spacing">Простор помеѓу линии</string>
     <string name="special_key">Специјално копче</string>
     <string name="key_page_up">Страна Нагоре (Page Up)</string>
     <string name="key_page_down">Страна Надоле (Page Down)</string>
+    <string name="move_text_one_line_up">Помести текст една линија нагоре</string>
+    <string name="move_text_one_line_down">Помести текст една линија надоле</string>
+    <string name="start_new_line_below">Почни нова линија подоле</string>
     <string name="key_pos_1">Почеток на линија (Home)</string>
     <string name="key_pos_end">Крај на линија (End)</string>
     <string name="key_pos_1_document">Почеток на документ</string>
     <string name="key_pos_end_document">Крај на документ</string>
+    <string name="key_ctrl_a">Селектирај се (Ctrl+A)</string>
+    <string name="start_on_bottom">Почни на дното</string>
+    <string name="unordered_list_char_dash">Црта (-)</string>
+    <string name="unordered_list_char_asterisk">Ѕвездичка (*)</string>
+    <string name="unordered_list_char_plus">Плус (+)</string>
+    <string name="vertical_alignment">Вертикално порамнување</string>
+    <string name="horizontal_alignment">Хоризонтално порамнување</string>
+    <string name="default_">Стандардно</string>
     <string name="left">Лево</string>
     <string name="right">Десно</string>
     <string name="top">Врв</string>
@@ -166,4 +178,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recently_viewed_documents">Неодамнешно видени документи</string>
     <string name="details">Детали</string>
     <string name="calendar">Календар</string>
+    <string name="gallery_picture">Слика од галерија</string>
+    <string name="camera_picture">Слика од камера</string>
+    <string name="color">Боја</string>
+    <string name="foreground">Предност</string>
+    <string name="background">Позадина</string>
+    <string name="type">Тип</string>
+    <string name="folder">Папки</string>
+    <string name="font">Фонт</string>
+    <string name="enter_or_select_format">Внесете или изберете формат</string>
+    <string name="pick_date">Одбери датум</string>
+    <string name="pick_time">Одвери време</string>
+    <string name="result">Резултат</string>
+    <string name="just_date">Само датум</string>
+    <string name="last_used">Последно употребено</string>
+    <string name="close">Затвори</string>
+    <string name="cancel">Откажи</string>
+    <string name="favourite">Омилен</string>
+    <string name="favourites">Омилени</string>
+    <string name="please_wait">Почекајте</string>
+    <string name="print_pdf">Принтај како PDF</string>
+    <string name="record_audio">Снимај Аудио</string>
+    <string name="attach">Придонеси</string>
+    <string name="copy_file">Копирај фајл</string>
+    <string name="page">Страница</string>
 </resources>
