Update translations (PR #1737)

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -27,6 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">Создај директориум</string>
     <string name="create_new_document">Создај нов документ</string>
     <string name="move">Премести</string>
+    <string name="copy">Копирај</string>
     <string name="info">Инфо</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Фајл/директориум веќе постои! Одберете друго име</string>
     <string name="import_from_device">Увезете од други уреди</string>
@@ -47,6 +48,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (како обичен текст)</string>
     <string name="document_editor_font">Документ Уредувачки Фонт</string>
     <string name="theme">Тема</string>
+    <string name="open_existing_files_in_view_mode">Отварај постечки фајлови во прегледен режим</string>
     <string name="about">За</string>
     <string name="plaintext">Обичен текст</string>
     <string name="file">Фајл</string>
@@ -108,6 +110,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive">Архивирај</string>
     <string name="add_task">Додади задача</string>
     <string name="add_x_witharg">Додади %s</string>
+    <string name="document_to_be_loaded_and_saved_as_witharg">Документ што ќе се отвори и сними како \"%s\"</string>
     <string name="refresh">Освежи</string>
     <string name="create_shortcut">Креирај кратенка</string>
     <string name="files_and_folders">Фајлови и директориуми</string>
@@ -121,6 +124,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_settings" needed="false">Нагодувања на апликација</string>
     <string name="editor_settings" needed="false">Нагодувања на Едитор</string>
     <string name="number_of_files_witharg" needed="false">Број на фајлови: %d</string>
+    <string name="app_wide">Низ апликацијата</string>
     <string name="main_view">Главен приказ</string>
     <string name="format">Формат</string>
     <string name="contexts">Контексти</string>
@@ -130,6 +134,93 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="other">Друго</string>
     <string name="empty_file">Празен фајл</string>
     <string name="tasks_with_todays_date">Задачи со денешен датум</string>
+    <string name="rtl_rendering">Десно-на-лево рендерирање</string>
+    <string name="highlight_line_ending">Означени краеви на линии</string>
+    <string name="highlight_line_ending_if_two_or_more_spaces">Означени краеви на линиите со две или повеќе празни места</string>
     <string name="general">Општо</string>
     <string name="resources">Ресурси</string>
+    <string name="line_spacing">Простор помеѓу линии</string>
+    <string name="special_key">Специјално копче</string>
+    <string name="key_page_up">Страна Нагоре (Page Up)</string>
+    <string name="key_page_down">Страна Надоле (Page Down)</string>
+    <string name="move_text_one_line_up">Помести текст една линија нагоре</string>
+    <string name="move_text_one_line_down">Помести текст една линија надоле</string>
+    <string name="start_new_line_below">Почни нова линија подоле</string>
+    <string name="key_pos_1">Почеток на линија (Home)</string>
+    <string name="key_pos_end">Крај на линија (End)</string>
+    <string name="key_pos_1_document">Почеток на документ</string>
+    <string name="key_pos_end_document">Крај на документ</string>
+    <string name="key_ctrl_a">Селектирај се (Ctrl+A)</string>
+    <string name="start_on_bottom">Почни на дното</string>
+    <string name="unordered_list_char_dash">Црта (-)</string>
+    <string name="unordered_list_char_asterisk">Ѕвездичка (*)</string>
+    <string name="unordered_list_char_plus">Плус (+)</string>
+    <string name="vertical_alignment">Вертикално порамнување</string>
+    <string name="horizontal_alignment">Хоризонтално порамнување</string>
+    <string name="default_">Стандардно</string>
+    <string name="left">Лево</string>
+    <string name="right">Десно</string>
+    <string name="top">Врв</string>
+    <string name="bottom">Дно</string>
+    <string name="center">Центар</string>
+    <string name="open_source_licenses">Лиценци за отворен код</string>
+    <string name="rate_this_app">Оценете ја оваа апликација</string>
+    <string name="translate">Преведи</string>
+    <string name="source_code">Изворен код</string>
+    <string name="project_license">Лиценца на проект</string>
+    <string name="descending">опаѓачки</string>
+    <string name="ascending">растечки</string>
+    <string name="location">Локација</string>
+    <string name="text_lines">Текст линии</string>
+    <string name="text_characters">Текст Карактери</string>
+    <string name="text_words">Текст Зборови</string>
+    <string name="directory">Директориуми</string>
+    <string name="recently_viewed_documents">Неодамнешно видени документи</string>
+    <string name="details">Детали</string>
+    <string name="calendar">Календар</string>
+    <string name="gallery_picture">Слика од галерија</string>
+    <string name="camera_picture">Слика од камера</string>
+    <string name="color">Боја</string>
+    <string name="foreground">Предност</string>
+    <string name="background">Позадина</string>
+    <string name="type">Тип</string>
+    <string name="folder">Папки</string>
+    <string name="font">Фонт</string>
+    <string name="enter_or_select_format">Внесете или изберете формат</string>
+    <string name="pick_date">Одбери датум</string>
+    <string name="pick_time">Одвери време</string>
+    <string name="result">Резултат</string>
+    <string name="just_date">Само датум</string>
+    <string name="last_used">Последно употребено</string>
+    <string name="close">Затвори</string>
+    <string name="cancel">Откажи</string>
+    <string name="favourite">Омилен</string>
+    <string name="favourites">Омилени</string>
+    <string name="please_wait">Почекајте</string>
+    <string name="print_pdf">Принтај како PDF</string>
+    <string name="record_audio">Снимај Аудио</string>
+    <string name="attach">Придонеси</string>
+    <string name="copy_file">Копирај фајл</string>
+    <string name="page">Страница</string>
+    <string name="experimental_features">Експериментални карактеристики</string>
+    <string name="tools">Алатки</string>
+    <string name="reading">Читање</string>
+    <string name="read">Прочитај</string>
+    <string name="table">Табла</string>
+    <string name="delete_lines">Избриши линии</string>
+    <string name="open_link">Отвори линк</string>
+    <string name="common_color_picker">Бирач на боја</string>
+    <string name="date_and_time">Датум и време</string>
+    <string name="jump_to_bottom">Оди на дното</string>
+    <string name="quote">Цитат</string>
+    <string name="heading">Заглавје</string>
+    <string name="heading_1">Заглавје 1</string>
+    <string name="heading_2">Заглавје 2</string>
+    <string name="heading_3">Заглавје 3</string>
+    <string name="created">Создадено</string>
+    <string name="code_block">Блок на код</string>
+    <string name="copy_move_conflict_message">\'%s\' веќе постои во %s</string>
+    <string name="infinite">Безконечно</string>
+    <string name="browse_by_project">Пребарај по проект</string>
+    <string name="completed">Завршено</string>
 </resources>
