[ci skip] Update translations (Russian)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -103,7 +103,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="priority">Важность</string>
     <string name="history">История</string>
     <string name="sync">Синхронизация</string>
-    <string name="search_or_custom">Искать или Новый</string>
+    <string name="search_or_custom">Искать / Новый</string>
     <string name="save">Сохранить</string>
     <string name="update">Обновить</string>
     <string name="clear">Очистить</string>
@@ -256,7 +256,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="preset">Шаблон</string>
     <string name="foreground">Передний план</string>
     <string name="background">Фон</string>
-    <string name="set_foreground_or_background_color_hexcolor_also_possible">Установить цвет фона или переднего плана текста? Также возможна вставка hex кода.</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Установить цвет текста или фона? Также возможна вставка hexcode #цвета.</string>
     <string name="type">Тип</string>
     <string name="folder">Папка</string>
     <string name="folder_is_created_without_extension">— Папка создаётся без расширения</string>
@@ -306,21 +306,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">Начальная папка</string>
     <string name="tab_width">Ширина табуляции</string>
     <string name="amount_of_space_for_tab">Количество пробелов в отступе</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Выбранный файл может быть текстовым файлом. Открыть его в редакторе или в другом приложении?\n\nНе пытаться открыть бинарные файлы. Если вы не уверены, откройте другое приложение.</string>
-    <string name="list_in_recent_files">Показывать в списке недавних</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Выбранный файл может быть текстовым файлом. Открыть его в редакторе или в другом приложении? \n\nНе пытайтесь открыть бинарные файлы. Если вы не уверены, откройте другим приложением.</string>
+    <string name="list_in_recent_files">Показывать в недавних файлах</string>
     <string name="reload">Обновить</string>
     <string name="wrap_words">Переносить слова</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Вставлять мягкие переносы вместо отображения ползунка горизонтальной прокрутки, когда текст не помещается по ширине на экране.</string>
     <string name="recursive_search_in_current_directory">Рекурсивный поиск в текущем каталоге.</string>
     <string name="always_open_with_this_app">Всегда открывать в этом приложении</string>
-    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Всегда открывать файлы этим приложением, если расширение есть в списке. Используйте \'None, .html, .css , .js\', например, если вы хотите редактировать веб-файлы и файлы без расширения.</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Если расширение файла есть в списке, всегда будет открывать его в Markor. К примеру, если вы хотите редактировать файлы без расширения и веб-файлы, введите \'None, .html, .css, .js\'.</string>
     <string name="template">Шаблон</string>
     <string name="send_debug_log">Отправить журнал отладки</string>
-    <string name="print_pdf">Печать / PDF</string>
+    <string name="print_pdf">Распечатать / PDF</string>
     <string name="bigger_headings">Увеличивать заголовки</string>
     <string name="increase_text_size_of_headings_according_to_level">Увеличивать размер текста заголовков в соответствии с уровнем (# h1, ## h2, ### h3…)</string>
     <string name="current">Текущий</string>
-    <string name="record_audio">Записать аудио</string>
+    <string name="record_audio">Записать Аудио</string>
     <string name="attach">Прикрепить</string>
     <string name="copy_file">Копировать файл</string>
     <string name="page">Страница</string>
@@ -329,7 +329,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">Чтение</string>
     <string name="read">Читать</string>
     <string name="table">Таблица</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Сколько колонок? Нажмите кнопку таблицы, чтобы запустить таблицу (вставить заголовок), нажмите короткую для добавления строки.</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Сколько колонок? Жмите кнопку таблицы долго, чтобы начать таблицу (вставить заголовок), нажмите коротко для добавления строки.</string>
     <string name="example_of_a_markdown_table">Пример Markdown-таблицы</string>
     <string name="delete_lines">Удалить строки</string>
     <string name="unordered_list">Неупорядоченный список</string>
@@ -351,7 +351,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="italic">Курсив</string>
     <string name="highlighted">Выделено</string>
     <string name="strikeout">Перечеркнутый</string>
-    <string name="inline_code">Встроенный код</string>
+    <string name="inline_code">Моноширинный</string>
     <string name="horizontal_line">Горизонтальная линия</string>
     <string name="toggle_done">Сменить статус</string>
     <string name="link_color">Цвет ссылок</string>
@@ -364,9 +364,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Назад</string>
     <string name="expand_collapse">Развернуть / Свернуть</string>
     <string name="essential">Основное</string>
-    <string name="append_human_readable_uuid_to_new_tasks">Добавить пользовательский UUID к новым задачам</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Добавить человекочитаемый UUID к новым задачам</string>
     <string name="action_order">Порядок действий</string>
-    <string name="toggle_action_visibility">Вкл/выкл видимость действия</string>
+    <string name="toggle_action_visibility">Переключить видимость операции</string>
     <string name="load_default_settings">Загрузить настройки по умолчанию</string>
     <string name="drag">Перетащите</string>
     <string name="created">Создано</string>
@@ -375,11 +375,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="encrypt_file_content">Шифровать содержимое файла</string>
     <string name="utf8_with_bom">UTF-8 с BOM</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">Не удалось зашифровать содержимое файла. Файл не был сохранен.</string>
-    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Не удалось расшифровать содержимое файла. Используете ли вы неверный пароль? Файл действительно зашифрован Markors AES?</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Не удалось расшифровать содержимое файла. Используете ли вы верный пароль? Файл действительно был зашифрован Markors AES?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Пароль уже установлен. Установка нового пароля перезапишет существующий пароль, и вы больше не сможете получить доступ к файлам в случае, если вы забудете пароль.</string>
     <string name="code_block">Блок кода</string>
     <string name="add_completion_date">Добавить дату завершения</string>
-    <string name="add_completion_date_for_todos_when_marking_them_as_done">Добавить дату завершения для задач при помечении их как выполненных</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Добавлять дату завершения для задач при пометке их как выполненных</string>
     <string name="file_description_format">Формат описания файла</string>
     <string name="file_description_format_dialog">Формат описания для каждого файла в обозревателе. Следуйте правилам SimpleDateFormat Android, добавив FS для отображения размера файла. Оставьте пустым, чтобы использовать формат по умолчанию для вашей локали.\n\nПример ввода:\nFS yyyy MMM dd hh:mm:ss aa\nФормат вывода:\n30KB 2020 Мар 20 11:24:52 PM</string>
     <string name="loading_default_value">Загрузка значения по умолчанию</string>
@@ -431,7 +431,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="match_all">Совпадение всех</string>
     <string name="dynamic_notebook_root_links">Динамический поиск корня блокнота</string>
     <string name="search_dynamically_for_notebook_root">Чтобы перейти по вики-ссылкам, необходимо динамически искать файл notebook.zim для определения корневого каталога текущей записной книжки. Установите флажок, если вы используете несколько цим-блокнотов или установленный в приложении каталог блокнота не соответствует вашему блокноту zim.</string>
-    <string name="share_into_format_prefix_for_text_shared">Формат/Префикс для текста, общего в Markor. Следуйте правилам SimpleDateFormat Android.\n\nИспользуйте заполнитель \'%s\' (окружённый одинарными кавычками) для размещения общего текста. Если не указано, общий текст добавляется и формат используется в качестве префикса.</string>
+    <string name="share_into_format_prefix_for_text_shared">Формат/Префикс для текста, отправленного в Markor. Следуйте правилам SimpleDateFormat Android.\n\nИспользуйте переменную \'%s\' (с одинарными кавычками) для размещения отправленного текста. Если не указано, отправленный текст добавляется и формат используется в качестве префикса.</string>
     <string name="share_into_format">Поделиться - Формат</string>
     <string name="auto_format">Автоформат</string>
     <string name="insert_snippet">Insert snippet</string>
